typo/content fixes/improvements

--- a/projects/gpr.html
+++ b/projects/gpr.html
@@ -39,12 +39,13 @@
 </div>
 
 <div style="margin-top: 20px; margin-bottom: 20px" class="ui text container">
- <h1>Vacay</h1>
+ <h1>Georadar</h1>
  <p><img class="ui medium right floated rounded image" src="../images/gpr.jpg" /></p>
 
 <p>This project was about redesign/improvement of existing Ground-penetrating radar hardware and software,
    which at the starting point was inconvenient to use.
-  The reason for that was that for operation it required external PC and battery and software was not designed to handle any hardware problems.</p>
+    The reason for this inconvenience was that for operation it required an external PC and battery.
+     The software was outdated and needed a lot of improvements/bugfixes along with adaptations to handle touchscreen input</p>
 </div>
 
 <div style="margin-top: 200px; margin-bottom: 20px" class="ui text container">
