Added Aq sensor project

--- a/projects/index.html
+++ b/projects/index.html
@@ -150,6 +150,36 @@
 
 
   <div class="card">
+    <div class="image">
+      <!-- Add image URL below -->
+      <img src="../images/CO2sensor.jpeg">
+    </div>
+  
+    <div class="content">
+      <span class="header">CO2 and a Lot More Environmental Sensor</span>
+      <div class="meta">
+        <span class="date">2022</span>
+      </div>
+  
+      <!-- Replace description below with the actual project description -->
+      <div class="description">
+        Detailed project on environmental sensing focusing on CO2 levels, among other parameters, developed using microcontrollers and supported by Autodesk Eagle for PCB design.
+      </div>
+    </div>
+  
+    <div class="extra content">
+      <div class="ui mini labels">
+        <div class="ui basic label">Microcontrollers</div>
+        <div class="ui basic label">C++</div>
+        <div class="ui basic label">Autodesk Eagle</div>
+      </div>
+    </div>
+  
+    <a class="ui bottom attached button" href="./AQdevice.html">Read More</a>
+  </div>
+
+
+  <div class="card">
       <div class="image">
         <img src="../images/stepper-driver-1.jpg">
       </div>
