Added energy controler project, tweaks in AQDevice

--- a/projects/index.html
+++ b/projects/index.html
@@ -72,11 +72,10 @@
 
       <a class="ui bottom attached button" href="./ray-optics.html">Read More</a>
 
-
 </div>
 
-<div class="card">
 
+<div class="card">
     <div class="image">
       <img src="../images/pixpi.jpg">
     </div>
@@ -112,10 +111,35 @@
   </div>
 
       <a class="ui bottom attached button" href="./pixpi.html">Read More</a>
-
-
 </div>
 
+  <div class="card">
+    <div class="image">
+        <img src="../images/energy_controler.jpg">
+    </div>
+
+    <div class="content">
+        <span class="header">Green energy controller</span>
+        <div class="meta">
+            <span class="date">2023</span>
+        </div>
+
+        <div class="description">
+            Key contribution to design of software and hardware for GSM network connected controller, dedicated for power monitoring applications.
+        </div>
+    </div>
+
+    <div class="extra content">
+        <div class="ui mini labels">
+            <div class="ui basic label">Linux</div>
+            <div class="ui basic label">LTE</div>
+            <div class="ui basic label">GSM</div>
+            <div class="ui basic label">Hardware design</div>
+        </div>
+    </div>
+
+    <a class="ui bottom attached button" href="./green-energy-controler.html">Read More</a>
+</div>
 
 <div class="card">
 
@@ -238,39 +262,8 @@
   </div>
 
 
-  <div class="card">
 
-      <div class="image">
-        <img src="../images/gpr.jpg">
-      </div>
-
-    <div class="content">
-      <span class="header">Contribution to the development of ground-penetrating radar</span>
-      <div class="meta">
-        <span class="date">~8 months of 2018</span>
-      </div>
-
-      <div class="description">
-        I modified heavily existing software for controlling the FMCW ground-penetrating radar and worked on the modification of hardware layer.
-      </div>
-    </div>
-
-    <div class="extra content">
-      <div class="ui mini labels">
-
-          <div class="ui basic label">Java</div>
-
-          <div class="ui basic label">Swing</div>
-
-          <div class="ui basic label">Embedded Windows</div>
-
-      </div>
-    </div>
-        <a class="ui bottom attached button" href="./gpr.html">Read More</a>
-  </div>
-
-  </div>
-</div>
+  
 
 <script>
   $('.ui.embed').embed();
