--- a/projects/AQdevice.html
+++ b/projects/AQdevice.html
@@ -9,8 +9,8 @@
 
   <!-- Load Javascript and CSS for Semantic UI -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script src="../css/semantic-ui/semantic.min.js"></script>
-  <link rel="stylesheet" href="../css/semantic-ui/semantic.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="../css/default.css">
   <link rel="stylesheet" type="text/css" href="../css/rouge/igorpro.css">
 </head>
@@ -21,14 +21,14 @@
     <a href="../index.html" class="brand item">
       <img class="ui avatar image" src="../images/me.jpeg"><span>Krzysztof Krześlak</span>
     </a>
-    <a href="./index.html" class="active item">Projects</a>
+    <a href="../projects.html" class="active item">Projects</a>
   </nav>
 </div>
 
 <div style="margin-top: 20px; margin-bottom: 20px" class="ui text container">
   <h1>Advanced Climate Measurement Device</h1>
   <p>
-    <img class="ui medium right floated rounded image" src="../images/CO2Sensor.jpeg">
+    <img class="ui medium right floated rounded image" src="../images/CO2sensor.jpeg">
   </p>
   <p>
     This project involves developing a compact environmental monitoring device using the M5Stack Core2. Designed for smart home integration, the device monitors air quality and environmental conditions, with data seamlessly transmitted to Home Assistant via MQTT for real-time analysis and automation.
