--- a/projects/index.html
+++ b/projects/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -42,90 +41,45 @@
   <div class="ui stackable centered three cards">
 
 <div class="card">
-
     <div class="image">
-      <img src="../images/ray-optics.png">
+        <img src="../images/stepper-driver-1.jpg">
     </div>
 
-  <div class="content">
-    <span class="header">Ray Optics fork</span>
-    <div class="meta">
-      <span class="date">November 2019</span>
+    <div class="content">
+        <span class="header">Stepper Motors Controller</span>
+        <div class="meta">
+            <span class="date">2017</span>
+        </div>
+
+        <div class="description">
+            I developed a 4-channel stepper motor controller based on Arduino and A4988 "stepsticks."
+        </div>
     </div>
 
-    <div class="description">
-      UI/UX modification, improvements and some bug fixes of javascript-based optics simulator, originally created by ricktu288
+    <div class="extra content">
+        <div class="ui mini labels">
+            <div class="ui basic label">Arduino</div>
+            <div class="ui basic label">C++</div>
+            <div class="ui basic label">Autodesk Eagle</div>
+        </div>
     </div>
-  </div>
 
-  <div class="extra content">
-    <div class="ui mini labels">
-
-        <div class="ui basic label">Javascript</div>
-
-        <div class="ui basic label">Bootstrap</div>
-
-        <div class="ui basic label">GitHub</div>
-
-    </div>
-  </div>
-
-      <a class="ui bottom attached button" href="./ray-optics.html">Read More</a>
-
+    <a class="ui bottom attached button" href="./stepper-controler.html">Read More</a>
 </div>
-
 
 <div class="card">
-    <div class="image">
-      <img src="../images/pixpi.jpg">
-    </div>
-
-  <div class="content">
-    <span class="header">PiXPI camera controler</span>
-    <div class="meta">
-      <span class="date">Started at 2017</span>
-    </div>
-
-    <div class="description">
-      I developed modular and programmable controller for DSLR camera with which I advanced to finals of 2019 Hackaday Prize
-    </div>
-  </div>
-
-  <div class="extra content">
-    <div class="ui mini labels">
-
-        <div class="ui basic label">Embedded</div>
-
-        <div class="ui basic label">Python</div>
-
-        <div class="ui basic label">Linux</div>
-
-        <div class="ui basic label">Java</div>
-
-        <div class="ui basic label">Android</div>
-
-        <div class="ui basic label">C++</div>
-
-        <div class="ui basic label">Autodesk Eagle</div>
-    </div>
-  </div>
-
-      <a class="ui bottom attached button" href="./pixpi.html">Read More</a>
-</div>
-
-  <div class="card">
     <div class="image">
         <img src="../images/energy_controler.jpg">
     </div>
 
     <div class="content">
-        <span class="header">Green energy controller</span>
+        <span class="header">Green Energy Controller</span>
         <div class="meta">
             <span class="date">2023</span>
         </div>
 
         <div class="description">
-            Key contribution to design of software and hardware for GSM network connected controller, dedicated for power monitoring applications.
+            Key contributions to the design of software and hardware for a GSM network-connected controller, dedicated to power monitoring applications.
         </div>
     </div>
 
@@ -134,7 +88,7 @@
             <div class="ui basic label">Linux</div>
             <div class="ui basic label">LTE</div>
             <div class="ui basic label">GSM</div>
-            <div class="ui basic label">Hardware design</div>
+            <div class="ui basic label">Hardware Design</div>
         </div>
     </div>
 
@@ -142,134 +96,139 @@
 </div>
 
 <div class="card">
-
     <div class="image">
-      <img src="../images/minisumo.jpg">
+        <img src="../images/pixpi.jpg">
     </div>
 
-  <div class="content">
-    <span class="header">Minisumo robot</span>
-    <div class="meta">
-      <span class="date"> ~5 months of 2013</span>
-    </div>
-
-    <div class="description">
-      Mini-sumo robot developed from ground-up, based on Atmel/Microchip AVR microcontroller with software developed in C++
-    </div>
-  </div>
-
-  <div class="extra content">
-    <div class="ui mini labels">
-
-        <div class="ui basic label">Microcontrolers</div>
-
-        <div class="ui basic label">C++</div>
-
-        <div class="ui basic label">Autodesk Eagle</div>
-    </div>
-  </div>
-
-      <a class="ui bottom attached button" href="./minisumo.html">Read More</a>
-  </div>
-
-
-  <div class="card">
-    <div class="image">
-      <!-- Add image URL below -->
-      <img src="../images/CO2sensor.jpeg">
-    </div>
-  
     <div class="content">
-      <span class="header">CO2 and a Lot More Environmental Sensor</span>
-      <div class="meta">
-        <span class="date">2022</span>
-      </div>
-  
-      <!-- Replace description below with the actual project description -->
-      <div class="description">
-        Detailed project on environmental sensing focusing on CO2 levels, among other parameters, developed using microcontrollers and supported by Autodesk Eagle for PCB design.
-      </div>
+        <span class="header">PiXPI Camera Controller</span>
+        <div class="meta">
+            <span class="date">Started in 2017</span>
+        </div>
+
+        <div class="description">
+            I developed a modular and programmable controller for DSLR cameras, which advanced to the finals of the 2019 Hackaday Prize.
+        </div>
     </div>
-  
+
     <div class="extra content">
-      <div class="ui mini labels">
-        <div class="ui basic label">Microcontrollers</div>
-        <div class="ui basic label">C++</div>
-        <div class="ui basic label">Autodesk Eagle</div>
-      </div>
+        <div class="ui mini labels">
+            <div class="ui basic label">Embedded</div>
+            <div class="ui basic label">Python</div>
+            <div class="ui basic label">Linux</div>
+            <div class="ui basic label">Java</div>
+            <div class="ui basic label">Android</div>
+            <div class="ui basic label">C++</div>
+            <div class="ui basic label">Autodesk Eagle</div>
+        </div>
     </div>
-  
+
+    <a class="ui bottom attached button" href="./pixpi.html">Read More</a>
+</div>
+
+<div class="card">
+    <div class="image">
+        <img src="../images/ray-optics.png">
+    </div>
+
+    <div class="content">
+        <span class="header">Ray Optics Fork</span>
+        <div class="meta">
+            <span class="date">November 2019</span>
+        </div>
+
+        <div class="description">
+            UI/UX modifications, improvements, and bug fixes for a JavaScript-based optics simulator originally created by ricktu288.
+        </div>
+    </div>
+
+    <div class="extra content">
+        <div class="ui mini labels">
+            <div class="ui basic label">JavaScript</div>
+            <div class="ui basic label">Bootstrap</div>
+            <div class="ui basic label">GitHub</div>
+        </div>
+    </div>
+
+    <a class="ui bottom attached button" href="./ray-optics.html">Read More</a>
+</div>
+
+<div class="card">
+    <div class="image">
+        <img src="../images/minisumo.jpg">
+    </div>
+
+    <div class="content">
+        <span class="header">Minisumo Robot</span>
+        <div class="meta">
+            <span class="date">~5 months in 2013</span>
+        </div>
+
+        <div class="description">
+            A mini-sumo robot developed from the ground up, based on an Atmel/Microchip AVR microcontroller with software written in C++.
+        </div>
+    </div>
+
+    <div class="extra content">
+        <div class="ui mini labels">
+            <div class="ui basic label">Microcontrollers</div>
+            <div class="ui basic label">C++</div>
+            <div class="ui basic label">Autodesk Eagle</div>
+        </div>
+    </div>
+
+    <a class="ui bottom attached button" href="./minisumo.html">Read More</a>
+</div>
+
+<div class="card">
+    <div class="image">
+        <img src="../images/CO2sensor.jpeg">
+    </div>
+
+    <div class="content">
+        <span class="header">CO2 and Environmental Sensor</span>
+        <div class="meta">
+            <span class="date">2022</span>
+        </div>
+
+        <div class="description">
+            A detailed project on environmental sensing, focusing on CO2 levels and other parameters, developed using microcontrollers and supported by Autodesk Eagle for PCB design.
+        </div>
+    </div>
+
+    <div class="extra content">
+        <div class="ui mini labels">
+            <div class="ui basic label">Microcontrollers</div>
+            <div class="ui basic label">C++</div>
+            <div class="ui basic label">Autodesk Eagle</div>
+        </div>
+    </div>
+
     <a class="ui bottom attached button" href="./AQdevice.html">Read More</a>
-  </div>
+</div>
 
-
-  <div class="card">
-      <div class="image">
-        <img src="../images/stepper-driver-1.jpg">
-      </div>
-
-    <div class="content">
-      <span class="header">stepper motors controller</span>
-      <div class="meta">
-        <span class="date">2017</span>
-      </div>
-
-      <div class="description">
-        I developed the 4-channel Stepper motors controller based on Arduino and A4988 "stepsticks"
-      </div>
-    </div>
-
-    <div class="extra content">
-      <div class="ui mini labels">
-
-          <div class="ui basic label">Arduino</div>
-
-          <div class="ui basic label">C++</div>
-
-          <div class="ui basic label">Autodesk Eagle</div>
-      </div>
-    </div>
-        <a class="ui bottom attached button" href="stepper-controler.html">Read More</a>
-  </div>
-
-  <div class="card">
-
-      <div class="image">
+<div class="card">
+    <div class="image">
         <img src="../images/asm-course.jpg">
-      </div>
+    </div>
 
     <div class="content">
-      <span class="header">AVR Assembler course</span>
-      <div class="meta">
-        <span class="date">September 2012</span>
-      </div>
+        <span class="header">AVR Assembler Course</span>
+        <div class="meta">
+            <span class="date">September 2012</span>
+        </div>
 
-      <div class="description">
-        I created a course about the programming of Atmel AVR microcontrollers in assembler language. The course was published on "Forbot", a polish forum about amateur robotics and electronics.
-      </div>
+        <div class="description">
+            I created a course on programming Atmel AVR microcontrollers in assembly language. The course was published on "Forbot," a Polish forum about amateur robotics and electronics.
+        </div>
     </div>
 
     <div class="extra content">
-      <div class="ui mini labels">
-
-          <div class="ui basic label">AVR</div>
-
-          <div class="ui basic label">Assembler</div>
-
-      </div>
+        <div class="ui mini labels">
+            <div class="ui basic label">AVR</div>
+            <div class="ui basic label">Assembler</div>
+        </div>
     </div>
-        <a class="ui bottom attached button" href="./asm-course.html">Read More</a>
-  </div>
 
-
-
-  
-
-<script>
-  $('.ui.embed').embed();
-</script>
-
-
-  </body>
-
-</html>
+    <a class="ui bottom attached button" href="./asm-course.html">Read More</a>
+</div>
